fixed navbar, images, paddings, margins, and layouts of the page. also realigned the content

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,48 @@
 body {
   font-family: "Open Sans", "Helvetica", "sans-serif";
   margin: 0;
+  font-size: 16px;
 }
 h1, h2, h3 {
   font-family: "Poppins", "sans-serif";
 }
 .text-center {
   text-align: center;
+}
+
+/* Main Sections */
+#about-me{
+  padding: 2.5rem;
+}
+#projects{
+  padding: 2.5rem;
+}
+#contact{
+  padding: 2.5rem;
+}
+
+/* Project-info */
+.project-info{
+  padding-top: 2.5rem;
+}
+
+/* -- Images & Icons */
+#prof-pic{
+  width: 290px;
+}
+
+.github-icons{
+  width:30px;
+}
+
+.contact-icons{
+  width:60px;
+}
+
+.paw-time-imgs{
+  width:400px;
+}
+
+.care-key-imgs{
+  height:400px;
 }
